--- a/index.html
+++ b/index.html
@@ -3,20 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@700&family=Merriweather+Sans:wght@700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lora:wght@700&family=Merriweather+Sans:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <title>Fall 2020</title>
     <style>
-      
       * {
         box-sizing: border-box;
       }
 
-      body, html {
+      body,
+      html {
         height: 100%;
       }
 
       .bg-image {
-        background-image: url("./img/family1-lite.jpg");
+        background-image: url("./img/family.jpg");
 
         /* Add the blur effect */
         filter: blur(6px);
@@ -44,13 +47,13 @@
         width: 100%;
         padding: 20px;
         text-align: center;
-        font-family: 'Merriweather Sans';
+        font-family: "Merriweather Sans";
         font-weight: 700;
         font-size: 2rem;
       }
 
       h1 {
-        font-family: 'Lora';
+        font-family: "Lora";
         font-weight: 700;
         font-size: 5rem;
       }
