--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Anand Sharma, Cisco Systems, Blog" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lora:wght@700&family=Merriweather+Sans:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lora:wght@700&family=Merriweather+Sans:wght@300;700&family=Montserrat:wght@200&display=swap"
       rel="stylesheet"
     />
-    <title>Fall 2020</title>
+    <title>Anand Sharma Home</title>
     <style>
       * {
         box-sizing: border-box;
@@ -57,6 +58,13 @@
         font-weight: 700;
         font-size: 5rem;
       }
+
+      .links {
+        margin-top: 65px;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 300;
+        font-size: 1.5rem;
+      }
     </style>
   </head>
   <body>
@@ -64,6 +72,9 @@
     <div class="bg-text">
       <h1>Anand Sharma</h1>
       <p>IT Architect, Cisco Systems</p>
+      <p class="links">
+        Blog &nbsp;&nbsp; | &nbsp;&nbsp; Resume &nbsp;&nbsp;| &nbsp;&nbsp; About
+      </p>
     </div>
   </body>
 </html>
